--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,14 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Class-Unique
-version:      0.03
-version_from: lib/Class/Unique.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Class-Unique
+version:             0.04
+abstract:            Create a unique subclass for every instance
+license:             ~
+author:              
+    - Mike Friedman <friedo@friedo.com>
+generated_by:        ExtUtils::MakeMaker version 6.44
+distribution_type:   module
+requires:     
     Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
